--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "yiisoft/yii2-authclient": "~2.1.0",
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-date-range": "*",
-        "kartik-v/yii2-field-range": "*"
+        "kartik-v/yii2-field-range": "*",
+        "paulzi/yii2-nested-sets": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
