--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "kartik-v/yii2-date-range": "*",
         "kartik-v/yii2-field-range": "*",
         "paulzi/yii2-nested-sets": "^1.0",
-        "yii-dream-team/yii2-upload-behavior": "^1.1"
+        "yii-dream-team/yii2-upload-behavior": "^1.1",
+        "bower-asset/font-awesome": "^4.7",
+        "bower-asset/owl.carousel": "^2.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
